--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,72 +6,98 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/animate.min.css" rel="stylesheet"> 
+    <link href="/css/lightbox.css" rel="stylesheet"> 
+    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/responsive.css" rel="stylesheet">
+
+    <link rel="shortcut icon" href="images/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">    
   </head>
 
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/events">Calendar</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <% if current_user %>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Events (<%= EventInvitation.where(user_id: current_user.id, decision: "pending").count %>)<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="/events/new">Add Event</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Groups (<%= GroupInvitation.where(user_id: current_user.id, decision: "pending").count %>)<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="/groups">See All</a></li>
-                <li><a href="/groups/new">Add Group</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          <% end %>
-        </ul>
-        <form class="navbar-form navbar-left">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        <ul class="nav navbar-nav navbar-right">
-          <% if current_user %>
-            <li><a>Welcome <%= current_user.name.capitalize %>!</a></li>
-            <li><%= link_to 'Log Out', '/logout', {method: :delete} %></li>
-          <% else %>
-            <li><a href="/signup">Sign Up</a></li>
-            <li><a href="/login">Log In</a></li>
-          <% end %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-
   <body>
+    <header id="header">  
+      <div class="navbar navbar-inverse" role="banner">
+        <div class="container">
+          <div class="navbar-header">
+              <a class="navbar-brand">
+                <% if current_user %>
+                  <h1><a href="/events"><%= current_user.name.capitalize %>'s Calendar</a></h1>
+                <% end %>
+              </a>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <% if current_user %>
+                <li class="active"><a>today: <%= Date.today.strftime("%A, %b %e") %></a></li>
+                <li class="dropdown"><a>Events (<%= EventInvitation.where(user_id: current_user.id, decision: "pending").count %>) <i class="fa fa-angle-down"></i></a>
+                    <ul role="menu" class="sub-menu">
+                      <li><a href="/events/new">Add Event</a></li>
+                      <% if EventInvitation.where(user_id: current_user.id, decision: "pending").count > 0 %>
+                        <li><hr></li>
+                        <li><a><strong>Pending Events</strong></a></li>
+                        <% EventInvitation.where(user_id: current_user.id, decision: "pending").each do |event| %>
+                          <li><a href="/events/<%= event.event_id %>"><%= Event.find(event.event_id).name.capitalize %></a></li>
+                        <% end %>
+                      <% end %>
+                      <% if EventInvitation.where(user_id: current_user.id, decision: "Accept").count > 0 %>
+                        <li><hr></li>
+                        <li><a><strong>Accepted Events</strong></a></li>
+                        <% EventInvitation.where(user_id: current_user.id, decision: "Accept").each do |event| %>
+                          <li><a href="/events/<%= event.event_id %>"><%= Event.find(event.event_id).name.capitalize %></a></li>
+                        <% end %>
+                      <% end %>
+                    </ul>
+                </li>                    
+                <li class="dropdown"><a href="#">Groups (<%= GroupInvitation.where(user_id: current_user.id, decision: "pending").count %>) <i class="fa fa-angle-down"></i></a>
+                    <ul role="menu" class="sub-menu">
+                      <li><a href="/groups/new">Add Group</a></li>
+                      <% if GroupInvitation.where(user_id: current_user.id, decision: "pending").count > 0 %>
+                        <li><hr></li>
+                        <li><a><strong>Pending Groups</strong></a></li>
+                        <% GroupInvitation.where(user_id: current_user.id, decision: "pending").each do |group| %>
+                          <li><a href="/groups/<%= group.group_id %>"><%= Group.find(group.group_id).name.capitalize %></a></li>
+                        <% end %>
+                      <% end %>
+                      <% if GroupInvitation.where(user_id: current_user.id, decision: "Accept").count > 0 %>
+                        <li><hr></li>
+                        <li><a><strong>Accepted Groups</strong></a></li>
+                        <% GroupInvitation.where(user_id: current_user.id, decision: "Accept").each do |group| %>
+                          <li><a href="/groups/<%= group.group_id %>"><%= Group.find(group.group_id).name.capitalize %></a></li>
+                        <% end %>
+                      <% end %>
+                    </ul>
+                </li>
+                <li><%= link_to 'Log Out', '/logout', {method: :delete} %></li>
+              <% else %>
+                <li><a href="/signup">Sign Up</a></li>
+                <li><a href="/login">Log In</a></li>
+              <% end %>                 
+            </ul>
+          </div>
+          <div class="search">
+              <form role="form">
+                  <i class="fa fa-search"></i>
+                  <div class="field-toggle">
+                      <input type="text" class="search-form" autocomplete="off" placeholder="Search">
+                  </div>
+              </form>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <script type="text/javascript" src="js/lightbox.min.js"></script>
+    <script type="text/javascript" src="js/wow.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>   
     <%= yield %>
   </body>
 </html>
