--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,47 +1,54 @@
-<div id="calendar"></div>
+<div class="personalized-container">
+  <div class="row">
+    <div class="col-md-9" data-wow-duration="1000ms" data-wow-delay="300ms">
+      <div id="calendar"></div>
+    </div>
+    <div class="col-md-3" data-wow-duration="1000ms" data-wow-delay="300ms">
+      <% if @pending_events.count > 0 %>
+        <h3>Pending</h3>
+        <% @pending_events.each do |event| %>
+          <p>name: <%= event.name %></p>
+          <p>start: <%= event.friendly_time(event.start) %></p>
+          <p>end: <%= event.friendly_time(event.end) %></p>
+          <p>duration: <%= event.duration %></p>
+          <p>location: <%= event.location %></p>
+          <p>status: <%= event.status %></p>
+          <%= form_tag "/eventinvitations/#{EventInvitation.where(event_id: event.id, user_id: current_user.id)[0].id}", method: :patch do %>
+            <p><input type="submit" class="btn btn-success" name="decision" value="Accept"></p>
+            <p><input type="submit" class="btn btn-warning" name="decision" value="Tentative"></p>
+            <p><input type="submit" class="btn btn-danger" name="decision" value="Decline"></p>
+          <% end %>
+          <hr>
+        <% end %>
+      <% end %>
 
-<% if @pending_events.count > 0 %>
-  <h3>Pending</h3>
-  <% @pending_events.each do |event| %>
-    <p>name: <%= event.name %></p>
-    <p>start: <%= event.friendly_time(event.start) %></p>
-    <p>end: <%= event.friendly_time(event.end) %></p>
-    <p>duration: <%= event.duration %></p>
-    <p>location: <%= event.location %></p>
-    <p>status: <%= event.status %></p>
-    <%= form_tag "/eventinvitations/#{EventInvitation.where(event_id: event.id, user_id: current_user.id)[0].id}", method: :patch do %>
-      <p><input type="submit" class="btn btn-success" name="decision" value="Accept"></p>
-      <p><input type="submit" class="btn btn-warning" name="decision" value="Tentative"></p>
-      <p><input type="submit" class="btn btn-danger" name="decision" value="Decline"></p>
-    <% end %>
-    <hr>
-  <% end %>
-<% end %>
+      <% if @accepted_events.count > 0 %>
+        <h3>Accepted</h3>
+        <% @accepted_events.each do |event| %>
+          <p>name: <%= event.name %></p>
+          <p>start: <%= event.friendly_time(event.start) %></p>
+          <p>end: <%= event.friendly_time(event.end) %></p>
+          <p>duration: <%= event.duration %></p>
+          <p>location: <%= event.location %></p>
+          <p>status: <%= event.status %></p>
+          <p><%= button_to 'Show', "events/#{event.id}", {method: :get, class: "btn btn-primary"} %></p>
+          <hr>
+        <% end %>
+      <% end %>
 
-<% if @accepted_events.count > 0 %>
-  <h3>Accepted</h3>
-  <% @accepted_events.each do |event| %>
-    <p>name: <%= event.name %></p>
-    <p>start: <%= event.friendly_time(event.start) %></p>
-    <p>end: <%= event.friendly_time(event.end) %></p>
-    <p>duration: <%= event.duration %></p>
-    <p>location: <%= event.location %></p>
-    <p>status: <%= event.status %></p>
-    <p><%= button_to 'Show', "events/#{event.id}", {method: :get, class: "btn btn-primary"} %></p>
-    <hr>
-  <% end %>
-<% end %>
-
-<% if @tentative_events.count > 0 %>
-  <h3>Tentative</h3>
-  <% @tentative_events.each do |event| %>
-    <p>name: <%= event.name %></p>
-    <p>start: <%= event.friendly_time(event.start) %></p>
-    <p>end: <%= event.friendly_time(event.end) %></p>
-    <p>duration: <%= event.duration %></p>
-    <p>location: <%= event.location %></p>
-    <p>status: <%= event.status %></p>
-    <p><%= button_to 'Show', "events/#{event.id}", {method: :get, class: "btn btn-primary"} %></p>
-    <hr>
-  <% end %>
-<% end %>
+      <% if @tentative_events.count > 0 %>
+        <h3>Tentative</h3>
+        <% @tentative_events.each do |event| %>
+          <p>name: <%= event.name %></p>
+          <p>start: <%= event.friendly_time(event.start) %></p>
+          <p>end: <%= event.friendly_time(event.end) %></p>
+          <p>duration: <%= event.duration %></p>
+          <p>location: <%= event.location %></p>
+          <p>status: <%= event.status %></p>
+          <p><%= button_to 'Show', "events/#{event.id}", {method: :get, class: "btn btn-primary"} %></p>
+          <hr>
+        <% end %>
+      <% end %>   
+    </div>
+  </div>
+</div>
