--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,81 +1,42 @@
-<section id="page-breadcrumb">
-    <div class="vertical-center sun">
-         <div class="container">
-            <div class="row">
-                <div class="action">
-                    <div class="col-sm-12">
-                        <h1 class="title">New Event</h1>
-                    </div>
-                 </div>
-            </div>
-        </div>
+<h1 class="title text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="300ms">New Event</h1>
+<br>
+
+<section id="services">
+  <div class="container">
+    <div class="row" wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
+      <%= form_tag '/events', method: :post do %>
+        <h4>Who</h4>
+        <select class="multiselect" multiple="multiple", name = "groups[]">
+          <% @groups.each do |group| %>
+            <p><option value="<%= group %>"> <%= group %></option></p>
+          <% end %>
+        </select>
+        <br>
+        <br>
+        <h4>What</h4>
+        <p><input type="text" name="name"></p>
+        <br>
+        <h4>Where</h4>
+        <p><input type="text" name="location"></p>
+        <br>
+        <h4>When</h4>
+        <p>Start: <%= date_select :start_date,  :date, order: [:month, :day, :year] %> - <%= time_select :start_time, :time, ampm: true, minute_step: 15 %></p>
+        <p>End: <%= date_select :end_date, :date, order: [:month, :day, :year] %> - <%= time_select :end_time, :time, ampm: true, minute_step: 15 %></p>
+        <br>
+        <button class="btn btn-success" type="submit" name="submit" value="create">Create</button>
+        <button class="btn btn-primary" type="submit" name="submit" value="group_cal">See Group Calendar</button>
+        <button class="btn btn-warning" type="submit" name="submit" value="options">Provide Options</button>
+      <% end %>
     </div>
+  </div>
 </section>
 
-<%= form_tag '/events', method: :post do %>
-  <section id="services">
-      <div class="container">
-          <div class="row">
-              <div class="col-sm-3 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="300ms">
-                  <div class="single-service">
-                      <h2>Who</h2>
-                      <select class="multiselect" multiple="multiple", name = "groups[]">
-                        <% @groups.each do |group| %>
-                          <p><option value="<%= group %>"> <%= group %></p>
-                        <% end %>
-                      </select>
-                  </div>
-              </div>
-              <div class="col-sm-3 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
-                  <div class="single-service">
-                    <h2>What</h2>
-                    <p><input type="text" name="name"></p>
-                  </div>
-              </div>
-              <div class="col-sm-3 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
-                  <div class="single-service">
-                      <h2>When</h2>
-                      <select class="multiselect" multiple="multiple", name = "groups[]">
-                        <p>Known Location?</p>
-                      </select>
-                  </div>
-              </div>
-              <div class="col-sm-3 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="300ms">
-                  <div class="single-service">
-                      <h2>Where</h2>
-                      <p><input type="text" name="location"></p>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
+<script type="text/javascript">
+$(document).ready(function() {
 
-  <h3>Who</h3>
-  <select class="multiselect" multiple="multiple", name = "groups[]">
-    <% @groups.each do |group| %>
-      <p><option value="<%= group %>"> <%= group %></p>
-    <% end %>
-  </select>
-  <br>
-  <h3>When</h3>
-  <p>Start: <%= date_select :start_date,  :date, order: [:month, :day, :year] %> - 
-  <%= time_select :start_time, :time, ampm: true, minute_step: 15 %></p>
-  <p>End: <%= date_select :end_date, :date, order: [:month, :day, :year] %> - 
-  <%= time_select :end_time, :time, ampm: true, minute_step: 15 %></p>
-  <br>
+    $(document).ready(function() {
+      $('.multiselect').multiselect();
+    });
 
-  <!-- if known date -->
-  <p><input class="btn btn-success" type="submit" value="Send Invitation"></p>
-
-<% end %>
-
-  <!-- if group(s) selected share calendars -->
-  <p><button class="btn btn-primary" type="submit" href="">View Group Calendar</button></p>
-
-<%= form_tag '/options/new', method: :get do %>
-  <!-- HOW TO PASS IN HIDDEN GROUP PARAMETER FROM ABOVE???? -->
-  <p><input  type="hidden" name="groups" value="????????????"></p>
-  <p><input class="btn btn-warning" type="submit" value="Provide Options"></p>
-  <!-- JS to show instead of opening new page ... -->
-<% end %>
-
+});
+</script>
