--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,9 @@
         <div class="container">
           <div class="navbar-header">
               <a class="navbar-brand">
-                <% if current_user %>
+                <% if current_user && params[:group_id]%>
+                  <h1><a href="/groups/<%= Group.find(params[:group_id]).id %>/events"><%= Group.find(params[:group_id]).name.capitalize %>'s Calendar</a></h1>
+                <% elsif current_user %>
                   <h1><a href="/events"><%= current_user.name.capitalize %>'s Calendar</a></h1>
                 <% end %>
               </a>
@@ -37,67 +39,41 @@
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               <% if current_user %>
-                <li class="active"><a>today: <%= Date.today.strftime("%A, %b %e") %></a></li>
+                <li class="active"><a>Today is <%= Date.today.strftime("%A, %b %e") %></a></li>
+                <li><a href="/events">Home</a></li>
                 <li class="dropdown"><a>Events (<%= EventInvitation.where(user_id: current_user.id, decision: "pending").count %>) <i class="fa fa-angle-down"></i></a>
                     <ul role="menu" class="sub-menu">
                       <li><a href="/events/new">Add Event</a></li>
-                      <% if EventInvitation.where(user_id: current_user.id, decision: "pending").count > 0 %>
-                        <li><hr></li>
-                        <li><a><strong>Pending Events</strong></a></li>
-                        <% EventInvitation.where(user_id: current_user.id, decision: "pending").each do |event| %>
-                          <li><a href="/events/<%= event.event_id %>"><%= Event.find(event.event_id).name.capitalize %></a></li>
-                        <% end %>
-                      <% end %>
-                      <% if EventInvitation.where(user_id: current_user.id, decision: "Accept").count > 0 %>
-                        <li><hr></li>
-                        <li><a><strong>Accepted Events</strong></a></li>
-                        <% EventInvitation.where(user_id: current_user.id, decision: "Accept").each do |event| %>
-                          <li><a href="/events/<%= event.event_id %>"><%= Event.find(event.event_id).name.capitalize %></a></li>
-                        <% end %>
-                      <% end %>
                     </ul>
                 </li>                    
                 <li class="dropdown"><a href="#">Groups (<%= GroupInvitation.where(user_id: current_user.id, decision: "pending").count %>) <i class="fa fa-angle-down"></i></a>
                     <ul role="menu" class="sub-menu">
                       <li><a href="/groups/new">Add Group</a></li>
-                      <% if GroupInvitation.where(user_id: current_user.id, decision: "pending").count > 0 %>
-                        <li><hr></li>
-                        <li><a><strong>Pending Groups</strong></a></li>
-                        <% GroupInvitation.where(user_id: current_user.id, decision: "pending").each do |group| %>
-                          <li><a href="/groups/<%= group.group_id %>"><%= Group.find(group.group_id).name.capitalize %></a></li>
-                        <% end %>
-                      <% end %>
-                      <% if GroupInvitation.where(user_id: current_user.id, decision: "Accept").count > 0 %>
-                        <li><hr></li>
-                        <li><a><strong>Accepted Groups</strong></a></li>
-                        <% GroupInvitation.where(user_id: current_user.id, decision: "Accept").each do |group| %>
-                          <li><a href="/groups/<%= group.group_id %>"><%= Group.find(group.group_id).name.capitalize %></a></li>
-                        <% end %>
-                      <% end %>
+                      <li><a href="/groups">See All</a></li>
                     </ul>
                 </li>
                 <li><%= link_to 'Log Out', '/logout', {method: :delete} %></li>
+                <div class="search">
+                  <form role="form">
+                    <i class="fa fa-search"></i>
+                    <div class="field-toggle">
+                      <input type="text" class="search-form" autocomplete="off" placeholder="Search">
+                    </div>
+                  </form>
+                </div>
               <% else %>
-                <li><a href="/signup">Sign Up</a></li>
                 <li><a href="/login">Log In</a></li>
+                <li><a href="/signup">Sign Up</a></li>
               <% end %>                 
             </ul>
-          </div>
-          <div class="search">
-              <form role="form">
-                  <i class="fa fa-search"></i>
-                  <div class="field-toggle">
-                      <input type="text" class="search-form" autocomplete="off" placeholder="Search">
-                  </div>
-              </form>
           </div>
         </div>
       </div>
     </header>
 
-    <script type="text/javascript" src="js/lightbox.min.js"></script>
-    <script type="text/javascript" src="js/wow.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>   
+    <script type="text/javascript" src="/js/lightbox.min.js"></script>
+    <script type="text/javascript" src="/js/wow.min.js"></script>
+    <script type="text/javascript" src="/js/main.js"></script>   
     <%= yield %>
   </body>
 </html>
