--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,55 +1,35 @@
-<section id="page-breadcrumb">
-    <div class="vertical-center sun">
-         <div class="container">
-            <div class="row">
-                <div class="action">
-                    <div class="col-sm-12">
-                        <h1 class="title">Sign Up</h1>
-                    </div>
-                 </div>
+<h1 class="text-center wow fadeIn">Sign Up</h1>
+
+<section id="home-slider">
+    <div class="container">
+        <div class="row">
+            <div class="main-slider">
+                <div class="slide-text">
+                    <%= form_tag '/users', method: :post do %>
+                      <div class="col-md-6">
+                        <h3>Name</h3>
+                        <p><input type="text" name="name"></p>
+                        <h3>Email</h3>
+                        <p><input type="email" name="email"></p>
+                        <h3>Phone</h3>
+                        <p><input type="text" name="phone"></p>
+                      </div>
+                      <div class="col-md-6">
+                        <h3>Password</h3>
+                        <p><input type="password" name="password"></p>
+                        <h3>Confirm Password</h3>
+                        <p><input type="password" name="password_confirmation"></p>
+                        <br>
+                        <button class="btn btn-success">Sign Up</button>
+                      </div>
+                    <% end %>
+                </div>
+                <img src="images/home/slider/hill.png" class="slider-hill" alt="slider image">
+                <img src="images/home/slider/house.png" class="slider-house" alt="slider image">
+                <img src="images/home/slider/sun.png" class="slider-sun" alt="slider image">
+                <img src="images/home/slider/birds1.png" class="slider-birds1" alt="slider image">
+                <img src="images/home/slider/birds2.png" class="slider-birds2" alt="slider image">
             </div>
         </div>
     </div>
 </section>
-
-<%= form_tag '/users', method: :post do %>
-  <section id="services">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
-            <h2>Name</h2>
-            <p><input type="text" name="name"></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
-            <h2>Email</h2>
-            <p><input type="email" name="email"></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
-            <h2>Phone</h2>
-            <p><input type="text" name="phone"></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
-            <h2>Password</h2>
-            <p><input type="password" name="password"></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
-            <h2>Confirm Password</h2>
-            <p><input type="password" name="password_confirmation"></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
-          <h2><button class="btn btn-success" type="submit">Sign Up</button></h2>
-        </div>
-      </div>
-    </div>
-  </section>
-<% end %>
