--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -56,26 +56,35 @@
 <script type="text/javascript">
 $(document).ready(function() {
 
-    $('#calendar').fullCalendar({
-        // put your options and callbacks here
-        header: {
-          left:   'today prev,next',
-          center: 'title',
-          right:  'month,agendaWeek,agendaDay,listWeek'
-        },
-        events: 'events.json',
-        eventRender: function(event, element) { 
-          if (event.user) {
-            element.find('.fc-title').append(" - " + event.user);
-          }
-        },
-        selectable: true,
-        selectHelper: true,
-        select: function() {
-          window.location.href = '/events/new';
-        },
-    });
+  $('#calendar').fullCalendar(
+    {
+      // put your options and callbacks here
+      header: {
+        left:   'today prev,next',
+        center: 'title',
+        right:  'month,agendaWeek,agendaDay,listWeek'
+      },
+      events: 'events.json',
+      eventRender: function(event, element) { 
+        if (event.user) {
+          element.find('.fc-title').append(" - " + event.user);
+        }
+      },
+      selectable: true,
+      selectHelper: true,
+      dayClick: function(date, jsEvent, view) {
+        if (view.name !== 'month') {
+          return;
+        }
 
+        if (view.name === 'month') {
+          $('#calendar').fullCalendar('changeView', 'agendaDay', {events: 'events.json'});
+          $('#calendar').fullCalendar('gotoDate', date);
+        }
+      }
+    }
+  );
 });
 
 </script>
+
