--- a/app/views/events/presented_options.html.erb
+++ b/app/views/events/presented_options.html.erb
@@ -6,20 +6,23 @@
     <div class="row" wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
       <%= form_tag '/events/send_options', method: :post do %>
         <h4>Who</h4>
-          <% @groups.each do |group| %>
-            <p><option value="<%= group %>"> <%= group %></option></p>
+          <% @group_names.each do |group_name| %>
+            <p><input type="hidden" name="group_name" value="<%= group_name %>"><%= group_name %></p>
           <% end %>
         <br>
         <h4>What</h4>
-        <p><input type="text" name="name"></p>
+        <p><%= @event.name %></p>
+        <input type="hidden" name="event_name" value="<%= @event.name %>">
         <br>
         <h4>Where</h4>
-        <p><input type="text" name="location"></p>
+        <p><%= @event.location %></p>
         <br>
         <h4>Options</h4>
         <select class="multiselect" multiple="multiple", name = "options[]">
           <% @available_options.each do |available_option| %>
-          <p><option value="<%= available_option[:start].first %> - <%= (Time.strptime(available_option[:start].last, "%a, %b %d %I:%M %P") + 15.minutes).strftime("%a, %b %d %I:%M %P") %>"><%= available_option[:start].first %> - <%= (Time.strptime(available_option[:start].last, "%a, %b %d %I:%M %P") + 15.minutes).strftime("%a, %b %d %I:%M %P") %></option></p>
+          <p><option value="<%= [
+            Time.strptime(available_option[:start].first, "%a, %b %d %I:%M %P"), 
+            Time.strptime(available_option[:start].last, "%a, %b %d %I:%M %P") + 15.minutes] %>"><%= available_option[:start].first %> - <%= (Time.strptime(available_option[:start].last, "%a, %b %d %I:%M %P") + 15.minutes).strftime("%a, %b %d %I:%M %P") %></option></p>
           <% end %>
         </select>
         <br>
