--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -8,7 +8,11 @@
         <h4>Who</h4>
         <select class="multiselect" multiple="multiple" name = "groups[]">
           <% @groups.each do |group| %>
-            <p><option value="<%= group %>"> <%= group %></option></p>
+            <% if @chosen_group_id == Group.find_by(name: group).id %>
+              <p><option value="<%= group %>" selected="selected"> <%= group %></option></p>
+            <% else %>
+              <p><option value="<%= group %>"> <%= group %></option></p>
+            <% end %>
           <% end %>
         </select>
         <br>
@@ -20,8 +24,13 @@
         <p><input type="text" name="location"></p>
         <br>
         <h4>When</h4>
-        <p>Start: <%= date_select :start_date,  :date, order: [:month, :day, :year] %> - <%= time_select :start_time, :time, ampm: true, minute_step: 15 %></p>
-        <p>End: <%= date_select :end_date, :date, order: [:month, :day, :year] %> - <%= time_select :end_time, :time, ampm: true, minute_step: 15 %></p>
+        <% if params[:start] %>
+          <p>Start: <%= date_select :start_date,  :date, order: [:month, :day, :year], selected: Date.new(@default_start_year, @default_start_month, @default_start_date) %> - <%= time_select :start_time, :time, ampm: true, minute_step: 15, selected: DateTime.new(@default_start_year, @default_start_month, @default_start_date, @default_start_hour, @default_start_min) %></p>
+          <p>End: <%= date_select :end_date, :date, order: [:month, :day, :year], selected: Date.new(@default_end_year, @default_end_month, @default_end_date) %> - <%= time_select :end_time, :time, ampm: true, minute_step: 15, selected: DateTime.new(@default_end_year, @default_end_month, @default_end_date, @default_end_hour, @default_end_min) %></p>
+        <% else %>
+          <p>Start: <%= date_select :start_date,  :date, order: [:month, :day, :year] %> - <%= time_select :start_time, :time, ampm: true, minute_step: 15 %></p>
+          <p>End: <%= date_select :end_date, :date, order: [:month, :day, :year] %> - <%= time_select :end_time, :time, ampm: true, minute_step: 15 %></p>
+        <% end %>
         <br>
         <button class="btn btn-success" type="submit" name="submit" value="create">Create</button>
         <button class="btn btn-primary" type="submit" name="submit" value="group_cal">See Group Calendar</button>
@@ -30,6 +39,25 @@
     </div>
   </div>
 </section>
+
+<div class="container">
+    <div class="row">
+        <div class='col-sm-6'>
+        <%= form_tag "/", method: :post do %>
+            <input type='text' name="start" class="form-control" id='datetimepicker4' />
+            <br>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        <% end %>
+        </div>
+        <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker4').datetimepicker({
+                  stepping: 15
+                });
+            });
+        </script>
+    </div>
+</div>
 
 <script type="text/javascript">
 $(document).ready(function() {
