--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,8 @@
                 <li class="dropdown"><a>Events (<%= EventInvitation.where(user_id: current_user.id, decision: "pending").count + Option.where(user_id: current_user.id, vote: "pending").count %>) <i class="fa fa-angle-down"></i></a>
                     <ul role="menu" class="sub-menu">
                       <li><a href="/events/new">Add Event</a></li>
-                      <li><a href="/option_proposals">Option Proposals</a></li>
+                      <li><a href="/option_proposals">Event Options</a></li>
+                      <li><a href="/option_responses">Event Option Responses</a></li>
                     </ul>
                 </li>                    
                 <li class="dropdown"><a href="#">Groups (<%= GroupInvitation.where(user_id: current_user.id, decision: "pending").count %>) <i class="fa fa-angle-down"></i></a>
